--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body>
 
   <h1>Chúc mừng 20/10 💖</h1>
-  <button class="btn" id="showBtn">Bấm vào đây để xem lời chúc</button>
+  <button class="btn" id="showBtn">Bấm vào đây để tiếp tục</button>
   <div class="message" id="message">Chúc em 20/10 thật xinh đẹp, hạnh phúc và tràn đầy niềm vui! 💐</div>
 
   <script>
